--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+   "deploy": "npm run build && gh-pages -d dist -r https://github.com/SirGram/j-grader"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
