--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-   "deploy": "npm run build && gh-pages -d dist -r https://github.com/SirGram/j-grader"
+    "deploy": "npm run build && gh-pages -d dist -r https://github.com/SirGram/j-grader"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -24,20 +24,22 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@welldone-software/why-did-you-render": "^8.0.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.2",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
-    "prettier": "^3.3.1",
+    "prettier": "^3.6.2",
+    "prettier-eslint": "^16.4.2",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "typescript": "^4.9.5",
+    "vite": "^5.2.0",
+    "vue-eslint-parser": "^8.3.0"
   }
 }
